--- a/vignettes/send-data-to-taxsim.Rmd
+++ b/vignettes/send-data-to-taxsim.Rmd
@@ -40,7 +40,7 @@ vroom::vroom_write(taxsim_dataset, taxsim_filename)
 
 Now, manually upload the  file `taxsim_dataset.csv` to TAXSIM 35's server by going to (https://users.nber.org/~taxsim/taxsim35/), navigating to the following section of the page, and uploading the `.csv` file:
 
-```{r pic, echo=FALSE, fig.cap="", out.width = '75%'}
+```{r pic, echo=FALSE, warning = FALSE, fig.cap="", out.width = '75%'}
 knitr::include_graphics(here::here("vignettes", "webimg", "taxsim.png"))
 ```
 
