fix typo in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -112,7 +112,7 @@ There are two differences between `usincometaxes` and TAXSIM 35:
 
 1.  `usincometaxes` allows users to specify the state with either the two letter abbreviation or [state SOI code](https://users.nber.org/~taxsim/statesoi.html). 
 `usincometaxes` will convert the abbreviation to an SOI code for TAXSIM 35.
-2.  For filing status, `mstat` users can either use the TAXSIM 35 integer found in TAXSIM 35's documentation or 
+2.  For filing status, `mstat`, users can either use the TAXSIM 35 integer found in TAXSIM 35's documentation or 
 one of the following descriptions:
     * "single" or 1 for single;
     * "married, jointly" or 2 for married, filing jointly; 
