--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,8 @@ family_income <- data.frame(
 family_taxes <- taxsim_calculate_taxes(
   .data = family_income,
   marginal_tax_rates = 'Wages',
-  return_all_information = FALSE
+  return_all_information = FALSE,
+  interface = 'http'
 )
 ```
 
